classDiagram 

    %% Classes
    class ThomasSolver{
      -Vector _lower_diagonal
      -Vector _central_diagonal
      -Vector _upper_diagonal
      -Vector _right_hand_side
      + solve() Vector
    }

    class ImpliedVolatilitySurface{
      -Vector _maturities
      -Vector _strikes
      -Matrix _market_implied_volatilities
      -double _risk_free_rate
      + implied_volatility() double
      - evaluate_cubic_spline_coefficient() void
      - smile_implied_volatility() double
    }

    class MdModel{
      # Vector _initial_value
      + drift_term() Vector
      + diffusion_term() Vector
    }

    class Model{
      # double _initial_value
      + drift_term() double
      + diffusion_term() double
    }

    class BlackScholesModel{
      - double _drift
      - double _volatility
    }

    class BachelierModel{
      - double _drift
      - double _volatility
    }

    class DupireLocalVolatilityModel{
      - ImpliedVolatilitySurface _implied_volatility_surface
      - double _epsilon_maturity
      - double _epsilon_strike
    }

    class HestonModel{
      - double _kappa
	  - double _sigma_vol
	  - double _theta
	  - double _interest_rate
    }

    class PathSimulator{
      # Vector _time_points
      # Model _model
      + next_step() double
      + path() Vector
    }

    class MdPathSimulator{
      # Vector _time_points
      # Model _model
      # double correlation
      + next_step() double
      + path() Vector
    }

    class EulerPathSimulator{
    }

    class MdEulerPathSimulator{
    }

    class BroadieKayaPathSimulator{
        # HestonModel _model
        +generate_chi_squared() double
        +chi_prime() double
        +integral_sampling() double
        +var_next_step() double
        +asset_next_step() double
    }

    class Pricing{
        + price() double
    }

    class MonteCarlo{
        - int _nb_sim
        - PathSimulator _path_simulator_ptr
        - Pricing _pricing_ptr
        + price() double
        - generate_paths() Matrix
    }

    class MdMonteCarlo{
        - int _nb_sim
        - MdPathSimulator _path_simulator_ptr
        - Pricing _pricing_ptr
        + price() double
        - generate_paths() Matrix
    }

    class EuropeanOptionPricing{
        - double _strike
        - bool _is_call
    }

    class AmericanOptionPricing{
        - double _strike
        - bool _is_call
    }

    class AsianOptionPricing{
        - double _strike
        - bool _is_call
    }

    class ExplicitModel{
         # double _S
         # double _R
    }

    class ExplicitBlackScholesModel{
        - normalCDF() double
        - double _sigma
        + CallPrice() double
        + Vega() double
    }

    class ExplicitHestonModel{
        - C1() Complex
        - C2() Complex
        - D1() Complex
        - D2() Complex
        - phi1() Complex
        - phi2() Complex
        - P_1_2() Complex
        - gauss_hermite_points() Vector
        - gauss_hermite_weights() Vector
        - double _kappa
        - double _theta 
        - double _sigma
        - double _rho 
        - double _V0
        + CallPrice() double
        + PutPrice() double
    }

    class OptimisationImpliedVolatility{
        - double _epsilon_iv
        - ExplicitHestonModel _model_ptr
        - ExplicitBlackScholesModel _bs_model_ptr
        + calibration() 
        + loss_function() double
        + loss_function_square() double
        + implied_vol()
    }

    %% Links and interactions
    ThomasSolver -- ImpliedVolatilitySurface
    ImpliedVolatilitySurface o-- DupireLocalVolatilityModel
    PathSimulator --o Model
    MdPathSimulator --o MdModel
    MonteCarlo --o PathSimulator
    MdMonteCarlo --o MdPathSimulator
    MonteCarlo --o Pricing
    MdMonteCarlo --o Pricing
    Model <|-- BlackScholesModel
    Model <|-- DupireLocalVolatilityModel
    Model <|-- BachelierModel
    MdModel <|-- HestonModel
    PathSimulator <|-- EulerPathSimulator
    MdPathSimulator <|-- MdEulerPathSimulator
    MdPathSimulator <|-- BroadieKayaPathSimulator
    Pricing <|-- EuropeanOptionPricing
    Pricing <|-- AmericanOptionPricing
    Pricing <|-- AsianOptionPricing
    ExplicitModel <|-- ExplicitHestonModel
    ExplicitModel <|-- ExplicitBlackScholesModel
    OptimisationImpliedVolatility --o ExplicitModel


    %% Style
    style Model fill:#f1948a,stroke:#333,stroke-width:2px
    style MdModel fill:#f1948a,stroke:#333,stroke-width:2px
    style BlackScholesModel fill:#f2d7d5 ,stroke:#333,stroke-width:1px
    style BachelierModel fill:#f2d7d5 ,stroke:#333,stroke-width:1px
    style DupireLocalVolatilityModel fill:#f2d7d5 ,stroke:#333,stroke-width:1px
    style HestonModel fill:#f2d7d5 ,stroke:#333,stroke-width:1px
     
    style Pricing fill: #1abc9c ,stroke:#333,stroke-width:2px
    style EuropeanOptionPricing fill: #d1f2eb ,stroke:#333,stroke-width:1px
    style AmericanOptionPricing fill: #d1f2eb ,stroke:#333,stroke-width:1px
    style AsianOptionPricing fill: #d1f2eb ,stroke:#333,stroke-width:1px

    style PathSimulator fill: #f4d03f,stroke:#333,stroke-width:2px
    style MdPathSimulator fill: #f4d03f,stroke:#333,stroke-width:2px
    style EulerPathSimulator fill: #fcf3cf ,stroke:#333,stroke-width:1px
    style MdEulerPathSimulator fill: #fcf3cf ,stroke:#333,stroke-width:1px
    style BroadieKayaPathSimulator fill: #fcf3cf ,stroke:#333,stroke-width:1px


    style MonteCarlo fill: #85c1e9  ,stroke:#333,stroke-width:2px
    style MdMonteCarlo fill: #85c1e9  ,stroke:#333,stroke-width:2px
 
    style ImpliedVolatilitySurface fill:   #d5dbdb    ,stroke:#333,stroke-width:2px
    style ThomasSolver fill: #e5e8e8  ,stroke:#333,stroke-width:1px
 

    style Mineral fill:#bbf,stroke:#f66,stroke-width:2px,color:#fff,stroke-dasharray: 5 5

    style ExplicitModel fill: #ff991f,stroke:#333,stroke-width:2px
    style ExplicitBlackScholesModel fill: #fdbc6e ,stroke:#333,stroke-width:1px
    style ExplicitHestonModel fill: #fdbc6e  ,stroke:#333,stroke-width:1px

    style OptimisationImpliedVolatility fill:   #ffaaed   ,stroke:#333,stroke-width:2px
     